<resources>
    <string name="app_name">Dume</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="dume">Dume</string>
    <string name="socialConnect">Or connect with social by signing in as ..</string>
    <string-array name="promo_text_array">
        <item> Searching Teachers, Mentors, Coaching or boot camp Dume got you all  covered</item>
        <item> Dume will find you the best mentor on your demand, whenever you need</item>
        <item> Finding tuition was never been easier, just sign in as a mentor and get  started </item>
        <item> Reach maximum people with Dume and let your talent shine </item>
        <item> You never really learn something until you teach it, So start sharing your skill with dume </item>
    </string-array>
    <string-array name="changing_text_array">
        <item> Start learning with Dume </item>
        <item> Start mentoring with Dume  </item>
        <item> Publish your boot camp with Dume </item>
    </string-array>
    <string name="title_activity_auth_final">Confirm your info</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="privacy_notice1">By Continuing, I confirm that I have read</string>
    <string name="privacy_notice2">and agree to the&#160;&#160;</string>
    <string name="privacy_notice3">&#160;and&#160;&#160;</string>
    <string name="hiperlink_term_text">Terms &amp; Conditions&#160;</string>
    <string name="hiperlink_privacy_text">Privacy Policy.</string>
    <string name="title_activity_social_init">SocialInitActivity</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="typing">Typing </string>
    <string name="lorem_para">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent arcu tellus, tincidunt at hendrerit nec,
        rhoncus non ligula. Cras vehicula cursus felis, at malesuada augue consequat ut. Vestibulum tincidunt enim magna,
    </string>
    <string name="lorem_para_sm">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent arcu tellus
    </string>
    <string name="facebook_app_id">2108291549389177</string>
    <string name="fb_login_protocol_scheme">fb2108291549389177</string>
    <string name="title_activity_stu_homepage">stuHomepageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search_mentors">Search Mentors</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="records">Records</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="refresh">Refresh</string>
    <string name="intro1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat,</string>
    <string name="intro2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque impedit ipsum nostrum odit officia rerum?</string>
    <string name="intro3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, sit!</string>
    <string name="intro4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
    <string name="intro5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur.</string>
    <string name="intro6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum cupiditate eos possimus saepe!</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string-array name="religion">
        <item>Islam</item>
        <item>Hindu</item>
        <item>Christian</item>
        <item>Buddha</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_location_picker">Map</string>
    <string name="search_icon">ic search</string>
    <string name="enter_search_point">Enter Search Point</string>
    <string name="title_activity_profile_page">ProfilePageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="display_pic">Display Pic</string>
    <string name="current_address">Permanent Address</string>
    <string name="current_status">Current Status</string>
    <string name="previous_result">Previous Result</string>
    <string name="search_radius">Search Radius</string>
    <string name="title_activity_grabing_info">Grabing Search Info</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="help">Help</string>
    <string name="tob_medium">Medium</string>
    <string name="tab_class">Class</string>
    <string name="tab_subject">Subject</string>
    <string name="tab_payment">Payment</string>
    <string name="tab_gender_preference">Gender</string>
    <string name="tab_cross_ckeck">Cross Check</string>
    <string name="demo_data">demo</string>
    <string name="title_activity_grabing_location">Grabing Location</string>
    <string name="fucking_testing_lorum">This is working example of bottom sheet   remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumThis is working example of bottom sheet   remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumThis is working example of bottom sheet   remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumThis is working example of bottom sheet   remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumThis is working example of bottom sheet   remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumThis is working example of bottom sheet   remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumThis is working example of bottom sheet   remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumThis is working example of bottom sheet   remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumThis is working example of bottom sheet   remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="title_activity_grabing_package">Select Package</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="search_radius_title">Select search radius</string>
    <string name="pref_title_new_message_notifications">Toggle notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="starred_messages">Starred messages</string>
    <string name="start_couching_text">Life is constantly bringing us challenges and opportunities. When we have the courage to step up to the challenges and seize the opportunities we move forward. As a coach, you can help others make this kind of progress.</string>
    <string name="take_couching_text">People don\'t only use a coach when there is a problem with their technique; they understand that no matter how good their technique is, there is always room for improvement.</string>
    <string name="house">house</string>
    <string name="refer_mentor">refer_mentor</string>
    <string name="delete">Delete</string>
    <string name="mute">Mute</string>
</resources>