<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.dume.dume.commonActivity.inboxActivity.InboxActivity">

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:orderInCategory="1"
        android:icon="@drawable/ic_delete_icon"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/action_mute"
        android:title="@string/mute"
        android:orderInCategory="2"
        android:icon="@drawable/ic_mute_main_icon"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_starred"
        android:orderInCategory="100"
        android:enabled="false"
        android:title="@string/starred_messages"
        app:showAsAction="never" />
</menu>
