<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <!--Search one-->
    <PreferenceCategory
        android:key="pref_key_login_settings"
        android:title="Search">

        <ListPreference
            android:defaultValue="-1"
            android:icon="@drawable/ic_search_radius"
            android:entries="@array/search_radius_appearance_keys"
            android:entryValues="@array/search_radius_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/search_radius_title" />

    </PreferenceCategory>


    <!--Appearance One -->
    <PreferenceCategory
        android:key="pref_key_login_settings"
        android:title="Appearance">

        <ListPreference
            android:defaultValue="180"
            android:entries="@array/search_radius_appearance_keys"
            android:entryValues="@array/search_radius_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:selectable="false"
            android:shouldDisableView="true"
            android:title="@string/search_radius_title" />

        <ListPreference
            android:defaultValue="180"
            android:entries="@array/search_radius_appearance_keys"
            android:entryValues="@array/search_radius_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:selectable="false"
            android:shouldDisableView="true"
            android:title="@string/search_radius_title" />

    </PreferenceCategory>

    <!--Notification one-->
    <PreferenceCategory
        android:key="pref_key_login_settings"
        android:title="Notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

    <!--Reminder one-->
    <PreferenceCategory
        android:key="pref_key_login_settings"
        android:title="Reminder">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>


    <!--Login-->
    <PreferenceCategory
        android:key="pref_key_login_settings"
        android:title="Login">

        <Preference
            android:key="fuck"
            android:title="Change Password"

            />

        <EditTextPreference
            android:key="fuck1"
            android:title="Change Password Hint"

            />
    </PreferenceCategory>


    <!--<SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

   <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    <PreferenceCategory
        android:title="Security"
        android:key="pref_key_security_settings">

        <SwitchPreference
            android:key="fuck2"
            android:title="Auto Lock"
            android:summary="Always prompt password login when the app is inactive for a while"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="About"
        android:key="pref_key_about_settings">

        <Preference
            android:key="fuck3"
            android:title="Upgrade"
            android:summary="Pro for peace of mind or be a Patron to support our work"
            />

        <Preference
            android:key="fuck4"
            android:title="❤ LuaPass"
            android:summary="Rate LuaPass on Play Store"
            />

        <Preference
            android:key="fuck5"
            android:title="Feedback"
            android:summary="Email us for question, suggestion or bug report"
            />

        <Preference
            android:key="fuck6"
            android:title="Version"
            />

    </PreferenceCategory>-->

</PreferenceScreen>
