<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".teacher.boot_camp_addvertise.BootCampAdd"
    tools:showIn="@layout/activity_boot_camp_add">

    <LinearLayout
        android:id="@+id/start_mentoring_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_corner_rela_layout"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:text="@string/start_couching_text"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:fontFamily="@font/cairo_regular" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.cunoraz.continuouscrollable.ContinuousScrollableImageView
                android:id="@+id/cloud"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                app:direction="left"
                app:duration="6000"
                app:imageSrc="@drawable/bs_cloud_image"
                app:scaleType="centerInside" />


            <com.cunoraz.continuouscrollable.ContinuousScrollableImageView
                android:id="@+id/couching_person"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/cloud"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                app:direction="right"
                app:duration="6000"
                app:imageSrc="@drawable/bs_couching_student_image"
                app:scaleType="centerInside" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_below="@+id/cloud"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/house"
                app:srcCompat="@drawable/bs_house_image" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="14dp"
            android:gravity="start"
            android:text="@string/take_couching_text"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:fontFamily="@font/cairo_regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3ca7a7a7" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/start_mentoring_intro"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:gravity="start"
                android:text="Team up with skilled mentors of your locality to start a coaching center for better earning &amp; service to student."
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:fontFamily="@font/cairo_regular" />


            <ImageView
                android:id="@+id/start_mentoring_imageView"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/refer_mentor"
                android:onClick="onBootCampViewClicked"
                app:srcCompat="@drawable/bs_start_mentoring_image" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3ca7a7a7" />

        <Button
            android:id="@+id/start_couching"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start your coaching center"
            android:textAllCaps="false"
            android:textColor="@color/colorLink"
            android:textSize="16sp"
            app:fontFamily="@font/cairo_regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3ca7a7a7" />

        <Button
            android:id="@+id/start_taking_couching"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start taking coaching today"
            android:textAllCaps="false"
            android:textColor="@color/colorLink"
            android:textSize="16sp"
            app:fontFamily="@font/cairo_regular" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>